force-app/main/default/objects/ClaimExposureStatus__c/ClaimExposureStatus__c.object-meta.xml
<CustomObject>
    <label>ClaimExposureStatus</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClaimExposureStatus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>