force-app/main/default/objects/ClaimExposureStatus__c/fields/L_FR_CA__c.field-meta.xml
<CustomField>
    <fullName>L_FR_CA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>L FR CA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>