force-app/main/default/objects/ClaimExposureStatus__c/fields/Retired__c.field-meta.xml
<CustomField>
    <fullName>Retired__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retired</label>
    <length>1</length>
    <type>Text</type>
</CustomField>