force-app/main/default/objects/ClaimExposureStatus__c/fields/TypeCode__c.field-meta.xml
<CustomField>
    <fullName>TypeCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>TypeCode</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>